# py-ccm15

./: CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  PROTOCOL.md  README.md  publish.ps1  pyproject.toml  release-please-config.json  setup.py
.github/workflows/: main.yml  release-please.yml  test.yml
ccm15/: CCM15Device.py  CCM15DeviceState.py  CCM15ReturnCode.py  CCM15SlaveDevice.py  TriState.py  __init__.py  const.py
py-ccm15/: __init__.py
tests/: test_ccm15.py  test_http.py  test_slave.py
